# finterm

./: .gitignore  CONTRIBUTING.md  Cargo.toml  IDEA.md  LICENSE  README.md  config.example.toml
.github/workflows/: ci.yml  release.yml
examples/: test_reddit.rs
homebrew/: README.md  finterm.rb
ports/devel/finterm/: Portfile
src/: lib.rs  main.rs
src/cache/: mod.rs
src/config/: mod.rs
src/models/: cache.rs  feed_item.rs  hn.rs  mod.rs  news.rs
src/providers/: arxiv.rs  cratesio.rs  finnhub.rs  hackernews.rs  link_preview.rs  mod.rs  reddit.rs  registry.rs
src/ui/: app.rs  mod.rs  theme.rs
src/ui/components/: list.rs  mod.rs  status_bar.rs
src/ui/views/: article.rs  comments.rs  dashboard.rs  feed.rs  help.rs  landing.rs  mod.rs
src/utils/: keybinds.rs  mod.rs  parser.rs
